# caroline

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPackConfig.cmake  Doxyfile.in  LICENSE  README.md  main.cc  unit_tests_main.cc
api/: CMakeLists.txt  protocol.proto
base/: at_exit.cc  at_exit.h  at_exit_unittest.cc  command_line.cc  command_line.h  command_line_unittest.cc  crash_helper.h  json.cc  json.h  json_unittest.cc  lock.cc  lock.h  logging.cc  logging.h  logging_posix.cc  logging_win.cc  macro.h  main_thread.h  message_loop.cc  message_loop.h  message_loop_impl.cc  message_loop_impl.h  path.cc  path.h  path_impl_posix.cc  path_impl_posix.h  path_service.cc  path_service.h  path_service_posix.cc  path_service_posix.h  path_service_unittest_posix.cc  posix_stream.cc  posix_stream.h  real_thread.cc  real_thread.h  real_thread_impl_cxx11.cc  real_thread_impl_cxx11.h  real_thread_impl_pthread.cc  real_thread_impl_pthread.h  real_thread_unittest.cc  (+41 more)
base/testing/: fake_thread.cc  fake_thread.h  message_loop.cc  message_loop.h  thread_bundle.cc  thread_bundle.h
cmake/: cxx11_support.cmake  platform_utils.cmake  targets_utils.cmake
core/: application_factory.cc  application_factory.h  cam_calib_unittest.cc  camera_calibration.cc  camera_calibration.h  cameras.cc  cameras.h  cameras_unittest.cc  caroline.cc  caroline.h  config.cc  config.h  depth_map.cc  depth_map.h  depth_map_builder.cc  depth_map_builder.h  depth_mesh.cc  depth_mesh.h  device_manager.cc  device_manager.h  device_manager_linux.cc  dummy_time_controller.cc  dummy_time_controller.h  farneback_optical_flow_processor.cc  farneback_optical_flow_processor.h  filter_unittest.cc  image_capture.cc  image_capture.h  image_capture_impl.cc  image_capture_impl.h  image_capture_manager.cc  image_capture_manager.h  image_capture_manager_impl.cc  image_capture_manager_impl.h  image_time_controller.cc  image_time_controller.h  json_matrix_helpers.cc  json_matrix_helpers.h  json_matrix_helpers_unittest.cc  lucas_kanade_optical_flow_processor.cc  (+93 more)
core/demo/: flowdemo.cc  flowdemo.h  stereo_calib_demo.cc  stereo_calib_demo.h
demo/calibratedemo/: main.cc  stereo_calib_demo.cc  stereo_calib_demo.h
demo/flowdemo/: flowdemo.cc  flowdemo.h  main.cc
demo/sgbmdemo/: main.cc  sgbm_depth_demo.cc  sgbm_depth_demo.h
test_images/: right02.ppm  right03.ppm
test_images/camera_calibration/: left00.ppm  left01.ppm  left02.ppm  left03.ppm  right00.ppm  right01.ppm
tools/: fixture-generator.py
